Little fix on treatment chart(color and y axis) and href on logo

--- a/assets/css/style/fabulash.css
+++ b/assets/css/style/fabulash.css
@@ -300,7 +300,7 @@ body {
 }
 
 .kt-aside-menu .kt-menu__nav > .kt-menu__item.kt-menu__item--here > .kt-menu__heading .kt-menu__link-icon svg g [fill], .kt-aside-menu .kt-menu__nav > .kt-menu__item.kt-menu__item--here > .kt-menu__link .kt-menu__link-icon svg g [fill] {
-    fill: #585963;
+    fill: #ffffff;
 }
 
 .kt-aside-menu .kt-menu__nav > .kt-menu__item.kt-menu__item--open > .kt-menu__heading, .kt-aside-menu .kt-menu__nav > .kt-menu__item.kt-menu__item--open > .kt-menu__link {
