--- a/assets/css/style/fabulash.css
+++ b/assets/css/style/fabulash.css
@@ -338,7 +338,6 @@ body {
     }
 }
 
-
 @media (max-width: 575px) {
     .margin-mobile-b-10 {
         margin-bottom : 10px;
@@ -356,4 +355,9 @@ body {
 .uploaded_img {
     width: 100%;
     height: auto;
+}
+
+.chart-height {
+  width: 100%;
+  height: 400px;
 }
