--- a/assets/css/style/fabulash.css
+++ b/assets/css/style/fabulash.css
@@ -350,6 +350,9 @@ body {
     .margin-mobile-b-5 {
         margin-bottom : 5px;
     }
+    .form-group {
+        margin-bottom: 1rem;
+    }
 }
 
 .uploaded_img {
@@ -358,6 +361,26 @@ body {
 }
 
 .chart-height {
-  width: 100%;
-  height: 400px;
+    width: 100%;
+    height: 400px;
+}
+
+.input-group-child-normal {
+    border-top-right-radius: 4px !important;
+    border-bottom-right-radius: 4px !important;
+}
+
+.form-label-brand {
+    background-color: #5578eb1a !important;
+    color: #5578eb !important;
+}
+
+.form-label-success {
+    background-color: #17bdbd26 !important;
+    color: #17bdbd !important;
+}
+
+.form-label-danger {
+    background-color: #fd397a1a !important;
+    color: #fd397a !important;
 }
