timepicker added, but still not decided yet (jquery(commented on fabulash css, datepicker js, and index.html style & script admin) or bootstrap)

--- a/assets/css/style/fabulash.css
+++ b/assets/css/style/fabulash.css
@@ -387,3 +387,7 @@ body {
     background-color: #fd397a1a !important;
     color: #fd397a !important;
 }
+
+/* .ui-timepicker-container {
+      z-index: 3500 !important;
+ } */
