Datatable normal added sortable, sortable false untuk table detail, order perbaikan untuk colomn 1 (order:[]), dan beberapa hal kecil lain

--- a/assets/css/style/fabulash.css
+++ b/assets/css/style/fabulash.css
@@ -396,6 +396,10 @@ body {
     text-align: center !important;
 }
 
+.no-sort::after { display: none!important; }
+
+.no-sort { pointer-events: none!important; cursor: default!important; }
+
 /* .ui-timepicker-container {
       z-index: 3500 !important;
  } */
