Gudang tambah stock

--- a/assets/css/style/fabulash.css
+++ b/assets/css/style/fabulash.css
@@ -448,3 +448,13 @@ body {
 .readonly {
     background-color: #f7f8fa !important;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance:textfield;
+}
