--- a/assets/css/style/fabulash.css
+++ b/assets/css/style/fabulash.css
@@ -458,3 +458,30 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance:textfield;
 }
+
+.kt-widget__files .kt-widget__desc:hover {
+    color: unset;
+    -webkit-transition: unset;
+    transition: unset;
+}
+
+.file-hover:hover .kt-widget__desc {
+    color: #5d78ff;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+.file-hover:hover .kt-widget__files .kt-widget__media g [fill] {
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    fill: #8cdbd7;
+}
+
+.separator:after {
+    display: block;
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+    content: " ";
+    background: #c8cada;
+}
