Admin Current Treatment done and edit

--- a/assets/css/style/fabulash.css
+++ b/assets/css/style/fabulash.css
@@ -485,3 +485,8 @@ input[type=number] {
     content: " ";
     background: #c8cada;
 }
+
+.toolbar-absolute {
+    position: absolute;
+    right: 25px;
+}
