Therapist Rework treatment detail done

--- a/assets/css/style/fabulash.css
+++ b/assets/css/style/fabulash.css
@@ -369,8 +369,7 @@ body {
 }
 
 .input-group-child-normal {
-    border-top-right-radius: 4px !important;
-    border-bottom-right-radius: 4px !important;
+    border-radius: 4px !important;
 }
 
 .form-label-brand {
