--- a/assets/css/style/fabulash.css
+++ b/assets/css/style/fabulash.css
@@ -451,6 +451,10 @@ body {
     font-size: 1.1rem;
 }
 
+tr .treatmentHeader {
+    font-size: 1.2rem;
+}
+
 
 @media (max-width: 768px) {
     .table-mobile {
