design invoice email

--- a/assets/css/style/print-style.css
+++ b/assets/css/style/print-style.css
@@ -23,8 +23,8 @@ body {
 
 header {
  /* padding: 10px 0;*/
-  padding: 5px;
-  margin-bottom: 30px;
+ padding: 5px;
+ margin-bottom: 30px;
 }
 
 #logo {
@@ -47,9 +47,9 @@ h4{
 }
 
 #id_invoice{
-    color: white;
-    border-top: none;
-    border-bottom: none
+  color: white;
+  border-top: none;
+  border-bottom: none
 }
 
 #project {
@@ -101,7 +101,7 @@ table th {
 
 
 tr:last-child {
-    border-bottom: 2px solid #C1CED9;
+  border-bottom: 2px solid #C1CED9;
 }
 
 table .service,
@@ -186,7 +186,22 @@ footer {
   font-size: 1.4rem;
 }
 
+
+
 @media print{
   @page { margin: 0; }
-   body { padding: 0.5cm; }
+  body { padding: 0.5cm; }
+  .custom-margin-jadwal {
+    margin-left: 0px !important;
+  }
+  #noInvoice,#tanggalInvoice,#waktuPengerjaan{
+    margin-right: -20vw;
+  }
+
+  .invoice-email #noInvoice,
+  .invoice-email #tanggalInvoice,
+  .invoice-email #waktuPengerjaan {
+    margin-right: -19vw;
+  }
+
 }
