--- a/assets/css/style/fabulash.css
+++ b/assets/css/style/fabulash.css
@@ -362,6 +362,12 @@ body {
     width: 308px;
 }
 
+.therapist-list-invoice {
+    margin-bottom: 15px;
+}
+
+
+
 @media (max-width: 1024px) {
     .sidebar-logo {
         display: unset;
