User Super Admin :hr_karyawan_detail.html tambah column treatment samping "kategori treatment", dan jumlah treatment per customer

--- a/assets/css/style/fabulash.css
+++ b/assets/css/style/fabulash.css
@@ -366,6 +366,13 @@ body {
     margin-bottom: 15px;
 }
 
+.costume-group-text{
+    background-color: #62cec9;
+    color: white;
+    border-radius: 5px 0px 0px 5px !important;
+    border: transparent;
+}
+
 
 
 @media (max-width: 1024px) {
