Tambahkan tombol delete http://localhost/fabulash/fabulash-fe/user_supervisor_studio/request_out_new.html

--- a/assets/css/style/fabulash.css
+++ b/assets/css/style/fabulash.css
@@ -650,6 +650,13 @@ body {
     background-color: #C2185B
 }
 
+.list-hapus{
+    color: salmon;
+}
+.list-hapus:hover{
+    color: tomato !important;
+}
+
 
 
 
